app-src/scripts/routes/settings/_settings-c.scss
.page-settings {
  text-align: left;

  h1 {
    // NOTE: this is not working
    break-after: avoid;
  }

  @media(min-width: $layout-gt-sm) {
    column-count: 2;
    section {
      display: inline-block;
      width: 100%;
      overflow: hidden;
      break-inside: avoid;
      -webkit-column-break-inside: avoid;
    }
  }

  @media(min-width: $layout-gt-lg) {
    column-count: 3;
  }

  .keep-together {
    display: inline-block;
    width: 100%;
  }

  .config-section {
    padding: 15px;
    margin-bottom: 10px;
    background: #ffffff;
    position: relative;

    @include dark-theme {
      background-color: $dark-theme-bg-lighter;
    }
    .md-title {
      margin-top: 0;
    }
  }

  @media(max-width: $layout-xs) {
    .keyboard-settings {
      display: none;
    }

    .md-button,
    button {
      width: 100%;
      max-width: 100%;
      overflow: hidden;
      text-overflow: ellipsis;
      margin-left: 0;
      margin-right: 0;
    }
  }
}

